Opened 12 years ago

Closed 12 years ago

#4132 closed defect (fixed)

Remuxing of VP61 from NSV to FLV flips video

Reported by: dort Owned by:
Priority: minor Component: avformat
Version: git-master Keywords: flv
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
Remuxing from an NSV container to an FLV using stream copy on a VP62 stream flips the image horizontally. The original stream displays correctly before the remux in VLC and ffplay.

How to reproduce:

% ffmpeg -i "http://99.198.118.250:8010/;stream.nsv" -c:v copy -c:a libfdk_aac -profile:a aac_he -f flv output.flv -report
ffmpeg version 2.4.3
built on Nov 19 2014 21:23:25 with Apple LLVM version 6.0 (clang-600.0.54) (based on LLVM 3.5svn)

Attachments (1)

ffmpeg-20141122-123958.log (66.1 KB ) - added by dort 12 years ago.
ffmpeg Report Log

Download all attachments as: .zip

Change History (5)

by dort, 12 years ago

Attachment: ffmpeg-20141122-123958.log added

ffmpeg Report Log

comment:1 by dort, 12 years ago

Summary: Remuxing of VP62 to FLV flips videoRemuxing of VP61 from NSV to FLV flips video

comment:2 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavformat
Keywords: flv added
Priority: normalminor
Reproduced by developer: set
Status: newopen
Version: 2.4.3git-master

For future tickets: Please always test current FFmpeg git head before reporting a problem.

Assuming you mean "vertically flipped", this is impossible to fix:
The versions of On2 VP6 video in nsv and flv differ: One is flipped, the other not. You have to force the correct version of the decoder with -vcodec vp6 if you want to decode such files.
I will send a patch to print a warning when the "wrong" version of VP6 is muxed in flv.

comment:3 by dort, 12 years ago

I believe it is vertically flipped along the horizontal axis. It is impossible to fix because it's a source problem and ffplay is smart enough to flip it automatically?

I tried using vp6 vs. vp6f but both images were flipped:

ffmpeg -vcodec vp6 -i ...
ffmpeg -vcodec vp6f -i ...

I'm trying to find a way to remux the existing stream without recoding the video and losing further quality.

Last edited 12 years ago by dort (previous) (diff)

comment:4 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: openclosed

A warning is printed since 78093cf8

To play the remuxed sample back with correct orientation use -vcodec vp6.

Note: See TracTickets for help on using tickets.