Print a warning if vp6 is muxed into flv: The output is flipped.

Fixes ticket #4132.